# GIDS

./: README.md  Results and Applicability.md  pyproject.toml  requirements.txt
docs/: paper_to_code_map.md  results_and_applicability.md
notebooks/: 00_framework_overview.ipynb  01_part2_embedding_and_memory.ipynb  02_part3_world_model_and_search.ipynb  03_part4_benchmarking_and_results.ipynb  04_ml_team_adaptation_guide.ipynb
results/: benchmark_cold_start_results.csv  benchmark_main_results.csv  benchmark_person_holdout_results.csv  benchmark_probe_results.csv  ips_results.csv  loss_search.csv  loss_search_summary.csv  slow_update_search.csv  slow_update_shock_summary.csv  slow_update_summary.csv  toy_benchmark_dataset.csv  toy_equation_checks.csv
src/gids_observer_framework/: __init__.py  benchmark.py  categorical.py  embedding.py  math_utils.py  memory.py  objective.py  ope.py  references.py  state.py  toy_data.py
src/gids_observer_framework/experiments/: __init__.py  run_all.py  run_benchmark.py  run_candidate_search.py  run_toy_equations.py
tests/: test_smoke.py
