[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gids-observer-framework"
version = "0.1.0"
description = "A clear Python framework and notebook walkthrough for the operational algebra in God’s Infinite Dimensional Space."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "jupyter>=1.0",
  "nbformat>=5.9",
  "nbclient>=0.8"
]

[tool.setuptools.packages.find]
where = ["src"]
